added walking and fixed legend/heart

--- a/visualization_nb.ipynb
+++ b/visualization_nb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = ['2-Back.csv', 'Rest.csv', 'Running.csv']\n",
+    "filenames = ['2-Back.csv', 'Rest.csv', 'Walking.csv', 'Running.csv']\n",
     "for i in filenames:\n",
     "    df = pd.read_csv(f'data/{i}')\n",
-    "    df = df.sample(300)\n",
+    "    df = df.sample(5000)\n",
     "    df.to_csv(f'data/sampled_{i}')"
    ]
   },
@@ -39,7 +39,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
